--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -63,7 +63,6 @@
                                                 <button type="button" class="btn btn-default" onclick="setTarget_1(6)">霰弹枪SG</button>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_1(7)">零件</button>
                                             </p>
-                                            <br>
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="active">
                                                     <a href="#hour" data-toggle="tab">平均每小时资源需求量</a>
@@ -141,6 +140,11 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane fade" id="method_2">
+                                            <p>
+                                                <div class="alert alert-warning" role="alert">
+                                                    计算的资源、契约结果为<a href="https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6%E6%9C%9F%E6%9C%9B/5362790?fr=aladdin" class="alert-link">数学期望</a>。如果您是非酋，请将大成功概率减小或设置为0。
+                                                </div>
+                                            </p>
                                             <h4>时长</h4>
                                             <div class="col-lg-6">
                                                 <div class="form-group input-group">
@@ -154,7 +158,6 @@
                                                     <span class="input-group-addon">分钟</span>
                                                 </div>
                                             </div>
-                                            <br><br><br>
                                             <h4>常用</h4>
                                             <p>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_2(1)">手枪HG</button>
@@ -166,7 +169,7 @@
                                                 <button type="button" class="btn btn-default" onclick="setTarget_2(5)">机枪MG</button>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_2(6)">霰弹枪SG</button>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_2(7)">零件</button>
-                                            </p><br>
+                                            </p>
                                             <h4>单次资源需求量</h4>
                                             <div class="form-group input-group">
                                                 <span class="input-group-addon">人力需求</span>
@@ -211,7 +214,6 @@
                                                     <span class="input-group-addon">分钟</span>
                                                 </div>
                                             </div>
-                                            <br><br><br>
                                             <h4>常用</h4>
                                             <p>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_3(1)">手枪HG</button>
@@ -223,7 +225,7 @@
                                                 <button type="button" class="btn btn-default" onclick="setTarget_3(5)">机枪MG</button>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_3(6)">霰弹枪SG</button>
                                                 <button type="button" class="btn btn-default" onclick="setTarget_3(7)">零件</button>
-                                            </p><br>
+                                            </p>
                                             <h4>平均每小时资源需求量</h4>
                                             <div class="form-group input-group">
                                                 <span class="input-group-addon">每小时人力需求</span>
@@ -258,15 +260,20 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <h4>后勤队伍平均大成功概率</h4>
-                                    <div class="form-group input-group col-lg-6">
-                                        <input type="text" class="form-control" id="Probability" value=60 onclick="this.select()">
-                                        <span class="input-group-addon" id="Display_Prob"></span>
-                                        <span class="input-group-addon">%</span>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="form-group input-group">
+                                                <input type="text" class="form-control" id="Probability" value=60 onclick="this.select()">
+                                                <span class="input-group-addon" id="Display_Prob"></span>
+                                                <span class="input-group-addon">%</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="checkbox">
+                                                <label> <input type="checkbox" id="ProbUp" onclick="Function_ProbUP()">后勤大成功UP</label>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="checkbox">
-                                        <label> <input type="checkbox" id="ProbUp" onclick="Function_ProbUP()">后勤大成功UP</label>
-                                    </div>
-                                    <br>
                                     <h4>关卡解锁</h4>
                                     <p>
                                         <select class="form-control" id="MapLimit">
@@ -284,7 +291,6 @@
                                             <option value=11 selected>第十一战役</option>
                                         </select>
                                     </p>
-                                    <br>
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
