update method_1, fix bugs

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -104,9 +104,20 @@
                                                     </div>
                                                 </div>
                                                 <div class="tab-pane fade" id="day">
-                                                    <div class="form-group input-group">
-                                                        <span class="input-group-addon">每天执行该后勤小时数</span>
-                                                        <input type="text" class="form-control" id="Hours" value=16 onclick="this.select()">
+                                                    <h4>每天执行该后勤时长</h4>
+                                                    <div class="row">
+                                                        <div class="col-lg-6">
+                                                            <div class="form-group input-group">
+                                                                <input type="text" class="form-control" id="Time1_hours" value=16 onclick="this.select()">
+                                                                <span class="input-group-addon">小时</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-lg-6">
+                                                            <div class="form-group input-group">
+                                                                <input type="text" class="form-control" id="Time1_minutes" value=0 onclick="this.select()">
+                                                                <span class="input-group-addon">分钟</span>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                     <div class="form-group input-group">
                                                         <span class="input-group-addon">每天人力需求</span>
@@ -146,16 +157,18 @@
                                                 </div>
                                             </p>
                                             <h4>时长</h4>
-                                            <div class="col-lg-6">
-                                                <div class="form-group input-group">
-                                                    <input type="text" class="form-control" id="Time2_hours" value=8 onclick="this.select()">
-                                                    <span class="input-group-addon">小时</span>
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="form-group input-group">
+                                                        <input type="text" class="form-control" id="Time2_hours" value=8 onclick="this.select()">
+                                                        <span class="input-group-addon">小时</span>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group input-group">
-                                                    <input type="text" class="form-control" id="Time2_minutes" value=0 onclick="this.select()">
-                                                    <span class="input-group-addon">分钟</span>
+                                                <div class="col-lg-6">
+                                                    <div class="form-group input-group">
+                                                        <input type="text" class="form-control" id="Time2_minutes" value=0 onclick="this.select()">
+                                                        <span class="input-group-addon">分钟</span>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <h4>常用</h4>
@@ -202,16 +215,18 @@
                                         </div>
                                         <div class="tab-pane fade" id="method_3">
                                             <h4>间隔时长</h4>
-                                            <div class="col-lg-6">
-                                                <div class="form-group input-group">
-                                                    <input type="text" class="form-control" id="Time3_hours" value=3 onclick="this.select()">
-                                                    <span class="input-group-addon">小时</span>
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="form-group input-group">
+                                                        <input type="text" class="form-control" id="Time3_hours" value=3 onclick="this.select()">
+                                                        <span class="input-group-addon">小时</span>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group input-group">
-                                                    <input type="text" class="form-control" id="Time3_minutes" value=0 onclick="this.select()">
-                                                    <span class="input-group-addon">分钟</span>
+                                                <div class="col-lg-6">
+                                                    <div class="form-group input-group">
+                                                        <input type="text" class="form-control" id="Time3_minutes" value=0 onclick="this.select()">
+                                                        <span class="input-group-addon">分钟</span>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <h4>常用</h4>
