--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -57,21 +57,21 @@
                                         <div class="tab-pane fade in active" id="method_1">
                                             <h4>常用</h4>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(1)">手枪HG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(2)">冲锋枪SMG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(3)">步枪RF</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(1)">手枪HG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(2)">冲锋枪SMG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(3)">步枪RF</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(4)">突击步枪AR</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(5)">机枪MG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(6)">霰弹枪SG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(4)">突击步枪AR</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(5)">机枪MG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(6)">霰弹枪SG</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(7)">1:1:1:1</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(8)">人力</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(9)">弹药</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(10)">口粮</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_1(11)">零件</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(7)">1:1:1:1</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(8)">人力</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(9)">弹药</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(10)">口粮</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(11)">零件</button>
                                             </p>
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="active">
@@ -163,7 +163,7 @@
                                         <div class="tab-pane fade" id="method_2">
                                             <p>
                                                 <div class="alert alert-warning" role="alert">
-                                                    计算的资源、契约结果为<a href="https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6%E6%9C%9F%E6%9C%9B/5362790?fr=aladdin" class="alert-link">数学期望</a>。如果您是非酋，请将大成功概率减小或设置为0。
+                                                    计算的资源、契约结果为<a href="https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6%E6%9C%9F%E6%9C%9B/5362790?fr=aladdin" class="alert-link">数学期望</a>。如果您是非酋，请将大成功概率减小或设置为0。:)
                                                 </div>
                                             </p>
                                             <h4>时长</h4>
@@ -183,21 +183,21 @@
                                             </div>
                                             <h4>常用</h4>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(1)">手枪HG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(2)">冲锋枪SMG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(3)">步枪RF</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(1)">手枪HG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(2)">冲锋枪SMG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(3)">步枪RF</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(4)">突击步枪AR</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(5)">机枪MG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(6)">霰弹枪SG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(4)">突击步枪AR</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(5)">机枪MG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(6)">霰弹枪SG</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(7)">1:1:1:1</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(8)">人力</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(9)">弹药</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(10)">口粮</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_2(11)">零件</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(7)">1:1:1:1</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(8)">人力</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(9)">弹药</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(10)">口粮</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(11)">零件</button>
                                             </p>
                                             <h4>单次需求量</h4>
                                             <div class="form-group input-group">
@@ -247,21 +247,21 @@
                                             </div>
                                             <h4>常用</h4>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(1)">手枪HG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(2)">冲锋枪SMG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(3)">步枪RF</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(1)">手枪HG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(2)">冲锋枪SMG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(3)">步枪RF</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(4)">突击步枪AR</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(5)">机枪MG</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(6)">霰弹枪SG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(4)">突击步枪AR</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(5)">机枪MG</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(6)">霰弹枪SG</button>
                                             </p>
                                             <p>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(7)">1:1:1:1</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(8)">人力</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(9)">弹药</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(10)">口粮</button>
-                                                <button type="button" class="btn btn-default" onclick="setTarget_3(11)">零件</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(7)">1:1:1:1</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(8)">人力</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(9)">弹药</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(10)">口粮</button>
+                                                <button type="button" class="btn btn-default" onclick="setTarget(11)">零件</button>
                                             </p>
                                             <h4>平均每小时需求量</h4>
                                             <div class="form-group input-group">
@@ -314,12 +314,6 @@
                                     <h4>关卡解锁</h4>
                                     <p>
                                         <select class="form-control" id="MapLimit">
-                                            <option value=1>第一战役</option>
-                                            <option value=2>第二战役</option>
-                                            <option value=3>第三战役</option>
-                                            <option value=4>第四战役</option>
-                                            <option value=4.5>第零战役 (通关4-4E)</option>
-                                            <option value=5>第五战役</option>
                                             <option value=6>第六战役</option>
                                             <option value=7>第七战役</option>
                                             <option value=8>第八战役</option>
