--- a/pages/GF_logistics_main.html
+++ b/pages/GF_logistics_main.html
@@ -16,7 +16,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../js/GF_logistics_html.js"></script>
-    <script src="../js/GF_logistics_main.js"></script>
+    <script src="../js/GF_logistics_data.js"></script>
+    <script src="../js/GF_logistics.js"></script>
     <script src="../js/GF_logistics_PrintPlan.js"></script>
 </head>
 
