--- a/pages/GF_logistics_main.html
+++ b/pages/GF_logistics_main.html
@@ -17,6 +17,7 @@
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../js/GF_logistics_html.js"></script>
     <script src="../js/GF_logistics_data.js"></script>
+    <script src="../js/GF_logistics_Tab.js"></script>
     <script src="../js/GF_logistics.js"></script>
     <script src="../js/GF_logistics_PrintPlan.js"></script>
 </head>
