--- a/pages/GF_logistics_main.html
+++ b/pages/GF_logistics_main.html
@@ -18,8 +18,8 @@
     <script src="../js/GF_logistics_html.js"></script>
     <script src="../js/GF_logistics_data.js"></script>
     <script src="../js/GF_logistics_Tab.js"></script>
+    <script src="../js/GF_logistics_Plan.js"></script>
     <script src="../js/GF_logistics.js"></script>
-    <script src="../js/GF_logistics_PrintPlan.js"></script>
 </head>
 
 <body>
