--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -56,9 +56,9 @@
                                         </ul>
                                         <div class="tab-content">
                                             <div class="tab-pane fade in active" id="Tab_Anytime">
-                                                <br>
-                                                是否按平均每天需求量计算:
-                                                <input id="toggle-event" type="checkbox" onclick="Tab_Anytime_hourorday()">
+                                                <div class="checkbox">
+                                                    <label><input id="toggle-event" type="checkbox" onclick="Tab_Anytime_hourorday()">按一天需求量计算</label>
+                                                </div>
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group input-group">
