--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -12,14 +12,13 @@
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="../css/GF_logistics.css" rel="stylesheet">
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/jquery-v2.1.1/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../js/GF_logistics_html.js"></script>
     <script src="../js/GF_logistics_data.js"></script>
     <script src="../js/GF_logistics_Tab.js"></script>
     <script src="../js/GF_logistics_Plan.js"></script>
     <script src="../js/GF_logistics.js"></script>
-    
 </head>
 
 <body>
@@ -190,21 +189,6 @@
                                                         <div class="tooltip-arrow"></div>
                                                         <div id="Tab_Timetable_range_tooltip_0_value" class="tooltip-inner">5:00</div>
                                                     </div>
-                                                    <!-- <span thumb id="Tab_Timetable_range_thumb_1" style="left:80%; background-color:rgb(221, 155, 155);" onmousedown="Tab_Timetable_DeleteThisTimePoint(1)">
-                                                        <span class="glyphicon glyphicon-remove-circle" style="font-size: 22px;"></span>
-                                                    </span>
-                                                    <div id="Tab_Timetable_range_tooltip_1" class="tooltip bottom custom-tooltip" style="left: 80%; top:12px;">
-                                                        <div class="tooltip-arrow"></div>
-                                                        <div class="tooltip-inner">4:00</div>
-                                                    </div> -->
-
-                                                    <!-- <span thumb id="Tab_Timetable_range_thumb_2" style="left:0%; background-color:rgb(221, 155, 155);" onmousedown="Tab_Timetable_DeleteThisTimePoint(2)">
-                                                        <span class="glyphicon glyphicon-remove-circle" style="font-size: 22px;"></span>
-                                                    </span>
-                                                    <div id="Tab_Timetable_range_tooltip_2" class="tooltip top custom-tooltip" style="left: -7.45%; top:-32px;">
-                                                        <div class="tooltip-arrow"></div>
-                                                        <div class="tooltip-inner">0:00</div>
-                                                    </div> -->
                                                 </div>
                                             </div>
                                             <h5>新添加一个收取后勤时间点:</h5>
