--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -107,7 +107,7 @@
                                                     <div range id="Tab_Anytime_range" style="left:0%;right:33.3333%;"></div>
                                                     <span thumb id="Tab_Anytime_thumb" style="left:66.6666%; background-color:#CCC;"></span>
                                                     <div sign id="Tab_Anytime_sign" style="left:66.6666%;">
-                                                        <span id="sign_limit_end_value">16</span>
+                                                        <span id="Tab_Anytime_sign_value">16</span>
                                                     </div>
                                                 </div>
                                                 <input id="Tab_Anytime_Time" type="range" tabindex="0" value="16" max="24"
@@ -383,5 +383,4 @@
         </div>
     </div>
 </body>
-
 </html>
