--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="alert alert-warning" role="alert">
-                            对于需求量的填写，计算结果只和四种资源之间的比例有关，既可以填实际需求量也可填需求比例。
+                            计算结果只和资源契约之间的<b>比例</b>有关。计算结果为<a href="https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6%E6%9C%9F%E6%9C%9B/5362790?fr=aladdin" class="alert-link">均值</a>。
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">设置</div>
@@ -289,17 +289,6 @@
                                             <option value=11 selected>第十一战役</option>
                                         </select>
                                     </p>
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading">
-                                            <h4 class="panel-title">
-                                                <a data-toggle="collapse" href="#colla-tdoll"
-                                                    class="collapsed">权重设置(高级设置)</a>
-                                            </h4>
-                                        </div>
-                                        <div id="colla-tdoll" class="panel-collapse collapse">
-                                            <div class="panel-body" id="weights"></div>
-                                        </div>
-                                    </div>
                                 </div>
                                 <div class="col-lg-5">
                                     <h4>常用</h4>
